--- a/homeManagerModules/fastfetch/config.jsonc
+++ b/homeManagerModules/fastfetch/config.jsonc
@@ -1,157 +1,116 @@
-// Load with --load-config examples/2.jsonc
-// Note that you must replace the image path to an existing image to display it.
-
 {
-    "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
-    "logo": {
-        "padding": {
-            "top": 2
-        }
+  "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
+  "logo": {
+    "padding": {
+      "top": 1,
+      "left": 1,
+      "right": 2
+    }
+  },
+  "display": {
+    "separator": "  "
+  },
+  "modules": [
+    // Title
+    {
+      "type": "title",
+      "format": "{#1}╭───────────── {#}{user-name-colored}"
     },
-    "display": {
-        "separator": " -> ",
-        "constants": [
-            "──────────────────────────────"
-        ]
+    // System Information
+    {
+      "type": "custom",
+      "format": "{#1}│ {#}System Information"
     },
-    "modules": [
-        {
-            "type": "custom",
-            "format": "┌{$1}{$1}┐",
-            "outputColor": "90"
-        },
-        {
-            "type": "title",
-            "keyWidth": 10
-        },
-        {
-            "type": "custom",
-            "format": "└{$1}{$1}┘",
-            "outputColor": "90"
-        },
-        {
-            "type": "custom",
-            "format": " {#90}  {#31}  {#32}  {#33}  {#34}  {#35}  {#36}  {#37}  {#38}  {#39}       {#38}  {#37}  {#36}  {#35}  {#34}  {#33}  {#32}  {#31}  {#90}"
-        },
-        {
-            "type": "custom",
-            "format": "┌{$1}{$1}┐",
-            "outputColor": "90"
-        },
-        {
-            "type": "os",
-            "key": "{icon} OS",
-            "keyColor": "yellow"
-        },
-        {
-            "type": "kernel",
-            "key": "│ ├",
-            "keyColor": "yellow"
-        },
-        {
-            "type": "packages",
-            "key": "│ ├󰏖",
-            "keyColor": "yellow"
-        },
-        {
-            "type": "shell",
-            "key": "│ └",
-            "keyColor": "yellow"
-        },
-        {
-            "type": "wm",
-            "key": " DE/WM",
-            "keyColor": "blue"
-        },
-        {
-            "type": "lm",
-            "key": "│ ├󰧨",
-            "keyColor": "blue"
-        },
-        {
-            "type": "wmtheme",
-            "key": "│ ├󰉼",
-            "keyColor": "blue"
-        },
-        {
-            "type": "icons",
-            "key": "│ ├󰀻",
-            "keyColor": "blue"
-        },
-        {
-            "type": "terminal",
-            "key": "│ ├",
-            "keyColor": "blue"
-        },
-        {
-            "type": "wallpaper",
-            "key": "│ └󰸉",
-            "keyColor": "blue"
-        },
-        {
-            "type": "host",
-            "key": "󰌢 PC",
-            "keyColor": "green"
-        },
-        {
-            "type": "cpu",
-            "key": "│ ├󰻠",
-            "keyColor": "green"
-        },
-        {
-            "type": "gpu",
-            "key": "│ ├󰍛",
-            "keyColor": "green"
-        },
-        {
-            "type": "disk",
-            "key": "│ ├",
-            "keyColor": "green"
-        },
-        {
-            "type": "memory",
-            "key": "│ ├󰑭",
-            "keyColor": "green"
-        },
-        {
-            "type": "swap",
-            "key": "│ ├󰓡",
-            "keyColor": "green"
-        },
-        {
-            "type": "uptime",
-            "key": "│ ├󰅐",
-            "keyColor": "green"
-        },
-        {
-            "type": "display",
-            "key": "│ └󰍹",
-            "keyColor": "green"
-        },
-        {
-            "type": "sound",
-            "key": " SND",
-            "keyColor": "cyan"
-        },
-        {
-            "type": "player",
-            "key": "│ ├󰥠",
-            "keyColor": "cyan"
-        },
-        {
-            "type": "media",
-            "key": "│ └󰝚",
-            "keyColor": "cyan"
-        },
-        {
-            "type": "custom",
-            "format": "└{$1}{$1}┘",
-            "outputColor": "90"
-        },
-        "break",
-        {
-            "type": "custom",
-            "format": " {#90}  {#31}  {#32}  {#33}  {#34}  {#35}  {#36}  {#37}  {#38}  {#39}       {#38}  {#37}  {#36}  {#35}  {#34}  {#33}  {#32}  {#31}  {#90}"
-        }
-    ]
+    {
+      "type": "os",
+      "key": "{#separator}│  {#keys}󰍹 OS"
+    },
+    {
+      "type": "kernel",
+      "key": "{#separator}│  {#keys}󰒋 Kernel"
+    },
+    {
+      "type": "uptime",
+      "key": "{#separator}│  {#keys}󰅐 Uptime"
+    },
+    {
+      "type": "packages",
+      "key": "{#separator}│  {#keys}󰏖 Packages",
+      "format": "{all}"
+    },
+    {
+      "type": "custom",
+      "format": "{#1}│"
+    },
+    // Desktop Environment
+    {
+      "type": "custom",
+      "format": "{#1}│ {#}Desktop Environment"
+    },
+    {
+      "type": "de",
+      "key": "{#separator}│  {#keys}󰧨 DE"
+    },
+    {
+      "type": "wm",
+      "key": "{#separator}│  {#keys}󱂬 WM"
+    },
+    {
+      "type": "wmtheme",
+      "key": "{#separator}│  {#keys}󰉼 Theme"
+    },
+    {
+      "type": "display",
+      "key": "{#separator}│  {#keys}󰹑 Resolution"
+    },
+    {
+      "type": "shell",
+      "key": "{#separator}│  {#keys}󰞷 Shell"
+    },
+    {
+      "type": "terminalfont",
+      "key": "{#separator}│  {#keys}󰛖 Font"
+    },
+    {
+      "type": "custom",
+      "format": "{#1}│"
+    },
+    // Hardware Information
+    {
+      "type": "custom",
+      "format": "{#1}│ {#}Hardware Information"
+    },
+    {
+      "type": "cpu",
+      "key": "{#separator}│  {#keys}󰻠 CPU"
+    },
+    {
+      "type": "gpu",
+      "key": "{#separator}│  {#keys}󰢮 GPU"
+    },
+    {
+      "type": "memory",
+      "key": "{#separator}│  {#keys}󰍛 Memory"
+    },
+    {
+      "type": "disk",
+      "key": "{#separator}│  {#keys}󰋊 Disk (/)",
+      "folders": "/"
+    },
+    {
+      "type": "custom",
+      "format": "{#1}│"
+    },
+    // Colors
+    {
+      "type": "colors",
+      "key": "{#separator}│",
+      "symbol": "circle"
+    },
+    // Footer
+    {
+      "type": "custom",
+      "format": "{#1}╰───────────────────────────────╯"
+    }
+  ]
 }
