slightly updated fastfetch, starship, and screenshots

--- a/homeManagerModules/fastfetch/config.jsonc
+++ b/homeManagerModules/fastfetch/config.jsonc
@@ -119,6 +119,11 @@
             "key": "│ ├󰓡",
             "keyColor": "green"
         },
+	{
+	    "type": "sound",
+	    "key": " SND",
+	    "keyColor": "cyan"
+	},
         {
             "type": "custom",
             "format": "└{$1}{$1}┘",
